# claude-cli-wrapper

./: .gitignore  CLAUDE.md  COST_TRACKING_IMPLEMENTATION.md  INTERACTIVE_TRANSFORMATION.md  README.md  THEME_IMPLEMENTATION_GUIDE.md  demo_progress.py  pyproject.toml  quick_test.py  start.sh  stop.sh
.github/workflows/: publish.yml
src/ccui/: __main__.py  cli.py  prompt_templates.py  scrape.py  scrape_simple.py  theme_specifications.py
src/ccux/: __init__.py  __main__.py  cli.py  cli_old.py  interactive.py  prompt_templates.py
src/ccux/core/: README.md  __init__.py  animation_utilities.py  claude_integration.py  configuration.py  content_processing.py  form_handling.py  project_management.py  section_management.py  signal_handling.py  usage_tracking.py
