
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccui"
version = "0.1.0"
description = "Claude Code UI generator CLI (frontend-only)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "playwright>=1.45.0",
  "PyYAML>=6.0.1"
]

[project.scripts]
ccui = "ccui.cli:app"
