
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccux"
version = "1.0.2"
description = "A sophisticated Python CLI tool that automatically generates conversion-optimized frontend landing pages using professional UX design thinking methodology"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "CCUX Team"}
]
keywords = ["ui", "ux", "landing-page", "generator", "claude", "ai", "design", "frontend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: User Interfaces"
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "playwright>=1.45.0",
    "PyYAML>=6.0.1"
]

[project.scripts]
ccux = "ccux.cli:app"
